_includes/css/agency.css
/* ... */
.portfolio-modal .modal-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.portfolio-modal .modal-content h2 {
    margin-bottom: 15px;
    font-size: 3em;
}

.portfolio-modal .modal-content p {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content p.item-intro {
    margin: 20px 0 30px;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
}

.portfolio-modal .modal-content ul.list-inline {
    margin-top: 0;
    margin-bottom: 30px;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    background-color: #222;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #222;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

::-moz-selection {
    text-shadow: none;
    background: #{{ site.color.primary }};
}

::selection {
    text-shadow: none;
    background: #{{ site.color.primary }};
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: #{{ site.color.primary }};
}

/* Custom Styling */
section#about .proj-about {
    max-width: 850px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 35px;
}
.link-item .link-icon {
    text-align: center;
}
.link-item .link-icon img {
    width: 100%;
    border-radius: 10%;
}
section#links .link-item .link-icon img {
    width: 50%;
}
section#links a:hover {
    text-decoration: none;
}
.link-item .link-desc {
    padding: 15px;
    text-align: center;
}
section#links .expand-info-desc i {
    color: #{{ site.color.primary }};
}
section#links .expand-info-desc {
    cursor: pointer;
}
section#links .expand-info-desc.shown i {
    -moz-transform: rotate(-90deg);
    -webkit-transform:rotate(-90deg); 
    -ms-transform:rotate(-90deg);
    -o-transform:rotate(-90deg);
}
section#links .info-desc {
    display: none;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
}
section#sponsors .section-heading {
    margin-bottom: 70px;
}
section#contact form.wufoo .form-group label {
    color: #ddd;
    font-size: 16px;
}
section#contact form.wufoo .form-group textarea.form-control {
    height: 297px;
}
section#contact form.wufoo .hidden-input {
    display: none;
}
.modal-content .close {
    color: black;
}
.modal-content .calendar-purchase-desc {
    margin-bottom: 40px;
}
.modal-content table {
    margin-left: auto;
    margin-right: auto;
}
.modal-content th {
    padding-left: 15px;
    padding-right: 15px;
}
.modal-content td {
    padding: 15px 5px;
}
@media(min-width:768px) {
    .modal-content td {
        padding: 15px;
    }
}
.modal-content #quantityInput {
    width: 60px;
}
.modal-content .calendar-purchase-desc {
    font-weight: normal;
}

